# keystonemiddleware

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  babel.cfg  bandit.yaml  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements-py3.txt  test-requirements.txt  tox.ini
config-generator/: keystonemiddleware.conf
doc/: .gitignore  Makefile  requirements.txt
doc/ext/: apidoc.py
doc/source/: audit.rst  conf.py  index.rst  installation.rst  middlewarearchitecture.rst
examples/pki/: gen_cmsz.py
examples/pki/cms/: auth_token_scoped.json  auth_token_scoped.pem  auth_token_scoped.pkiz  auth_v3_token_scoped.json  auth_v3_token_scoped.pem  auth_v3_token_scoped.pkiz
keystonemiddleware/: _memcache_crypt.py  _memcache_pool.py  audit.py  auth_token.py  ec2_token.py  exceptions.py  external_oauth2_token.py  fixture.py  i18n.py  oauth2_mtls_token.py  oauth2_token.py  opts.py  s3_token.py
keystonemiddleware/_common/: config.py
keystonemiddleware/audit/: __init__.py  _api.py  _notifier.py
keystonemiddleware/auth_token/: __init__.py  _auth.py  _base.py  _cache.py  _exceptions.py  _identity.py  _memcache_crypt.py  _memcache_pool.py  _opts.py  _request.py  _revocations.py  _signing_dir.py  _user_plugin.py  _utils.py
keystonemiddleware/echo/: __main__.py  service.py
keystonemiddleware/locale/en_GB/LC_MESSAGES/: keystonemiddleware.po
keystonemiddleware/locale/ko_KR/LC_MESSAGES/: keystonemiddleware.po
keystonemiddleware/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  memorycache.py  strutils.py
keystonemiddleware/tests/: client_fixtures.py  test_audit_middleware.py  test_auth_token_middleware.py  test_connection_pool.py  test_memcache_crypt.py  test_opts.py  test_s3_token_middleware.py  utils.py
keystonemiddleware/tests/auth_token/: test_auth.py  test_auth_token_middleware.py  test_revocations.py  test_signing_dir.py
keystonemiddleware/tests/unit/: client_fixtures.py  test_access_rules.py  test_audit_middleware.py  test_auth_token.py  test_connection_pool.py  test_ec2_token_middleware.py  test_entry_points.py  test_external_oauth2_token_middleware.py  test_fixtures.py  test_oauth2_mtls_token_middleware.py  test_oauth2_token_middleware.py  test_opts.py  test_s3_token_middleware.py  utils.py
keystonemiddleware/tests/unit/audit/: base.py  test_audit_api.py  test_audit_middleware.py  test_audit_oslo_messaging.py  test_logging_notifier.py
keystonemiddleware/tests/unit/auth_token/: base.py  test_auth.py  test_auth_token_middleware.py  test_base_middleware.py  test_cache.py  test_config.py  test_connection_pool.py  test_memcache_crypt.py  test_request.py  test_revocations.py  test_signing_dir.py  test_user_auth_plugin.py  test_utils.py
releasenotes/notes/: allow-expired-5ddbabcffc5678af.yaml  authprotocol-accepts-oslo-config-config-a37212b60f58e154.yaml  bp-enhance-oauth2-interoperability-b1a00f10887d33dd.yaml  bp-enhance-oauth2-interoperability-dd998d4e0eafed3c.yaml  bp-oauth2-client-credentials-ext-19a40c655ee43f57.yaml  bp-support-oauth2-mtls-2d2686c9d5b1fe1f.yaml  bp-whitelist-extension-for-app-creds-badf088c8ad584bb.yaml  bug-1490804-87c0ff8e764945c1.yaml  bug-1544840-a534127f8663e40f.yaml  bug-1583690-da67472d7afff0bf.yaml  bug-1583699-dba4fe6c057e2be5.yaml  bug-1583702-a4469dc1556878b9.yaml  bug-1649735-3c68f3243e474775.yaml  bug-1677308-a2fa7de67f21cd84.yaml  bug-1695038-2cbedcabf8ecc057.yaml  bug-1737115-fa3d41e3d3cd7177.yaml  bug-1737119-4afe548d28fbf8bb.yaml  bug-1747655-6e563d9317bb0f13.yaml  bug-1762362-3d092b15c7bab3a4.yaml  bug-1766731-3b29192cfeb77964.yaml  bug-1782404-c4e37bbc83756a89.yaml  bug-1789351-102e2e5119be38b4.yaml  bug-1800017-0e5a9b8f62b5ca60.yaml  bug-1803940-9a39c66014763af0.yaml  bug-1809101-6b5088443d5970ba.yaml  bug-1813739-80eae72371903119.yaml  bug_1540115-677cf5016bc46348.yaml  change-default-identity-endpoint-fab39579255c31bb.yaml  delay_auth_instead_of_503-f9b46bf4fbc11455.yaml  deprecate-caching-tokens-in-process-a412b0f1dea84cb9.yaml  deprecate-eventlet-unsafe-memcacheclientpool-f8b4a6733513d73e.yaml  drop-py-2-7-6655f421a9cac0a2.yaml  ec2-v2-removal-6a886210cbc9d3e9.yaml  enable-sasl-protocol-946149083f604216.yaml  fix-audit-no-service-endpoint-ports-72b2009d631dcf19.yaml  fix-cache-data-corrupted-issue-d1bd546625690581.yaml  interface-option-ed551d2a3162668d.yaml  ksm_4.1.0-3cd78446d8e63616.yaml  raise-lower-constraint-for-python-memcached-d96d96fe769f3419.yaml  remove-AuthTokenPlugin-cd773e3f1caba9ba.yaml  (+10 more)
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
tools/: debug_helper.sh  tox_install.sh
(+2 files in other folders)
