[metadata]
name = keystonemiddleware
summary = Middleware for OpenStack Identity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://launchpad.net/keystonemiddleware
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    keystonemiddleware

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    keystonemiddleware.auth_token = keystonemiddleware.opts:list_auth_token_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = keystonemiddleware/locale
domain = keystonemiddleware

[update_catalog]
domain = keystonemiddleware
output_dir = keystonemiddleware/locale
input_file = keystonemiddleware/locale/keystonemiddleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystonemiddleware/locale/keystonemiddleware.pot

[wheel]
universal = 1
