[metadata]
name = keystonemiddleware
summary = Middleware for OpenStack Identity
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/keystonemiddleware/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    keystonemiddleware

[extras]
audit_notifications =
  oslo.messaging>=5.29.0 # Apache-2.0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    keystonemiddleware.auth_token = keystonemiddleware.auth_token._opts:list_opts

paste.filter_factory =
    auth_token = keystonemiddleware.auth_token:filter_factory
    audit = keystonemiddleware.audit:filter_factory
    ec2_token = keystonemiddleware.ec2_token:filter_factory
    s3_token = keystonemiddleware.s3_token:filter_factory

[compile_catalog]
directory = keystonemiddleware/locale
domain = keystonemiddleware

[update_catalog]
domain = keystonemiddleware
output_dir = keystonemiddleware/locale
input_file = keystonemiddleware/locale/keystonemiddleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystonemiddleware/locale/keystonemiddleware.pot

[wheel]
universal = 1
