[metadata]
name = keystonemiddleware
summary = Middleware for OpenStack Identity
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/keystonemiddleware/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    keystonemiddleware

[extras]
audit_notifications =
  oslo.messaging>=5.29.0 # Apache-2.0

[entry_points]
oslo.config.opts =
    keystonemiddleware.auth_token = keystonemiddleware.auth_token._opts:list_opts
    keystonemiddleware.audit = keystonemiddleware.audit:list_opts

paste.filter_factory =
    auth_token = keystonemiddleware.auth_token:filter_factory
    audit = keystonemiddleware.audit:filter_factory
    ec2_token = keystonemiddleware.ec2_token:filter_factory
    s3_token = keystonemiddleware.s3_token:filter_factory
    oauth2_token = keystonemiddleware.oauth2_token:filter_factory
    oauth2_mtls_token = keystonemiddleware.oauth2_mtls_token:filter_factory
    external_oauth2_token = keystonemiddleware.external_oauth2_token:filter_factory
